<resources>
    <string name="app_name">免費睡眠呼吸中止檢測</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fragment_heartrate">Heart Rate</string>
    <string name="fragment_spo2">SPO2</string>
    <string name="fragment_exercise">Exercise</string>

    <string name="job_done">完成</string>
    <string name="next_step">下一步</string>
    <string name="spo2_teaching">放入手指後自動開機，戴著睡覺食指、中指、無名指皆可。</string>
    <string name="spo2_connect">手機連結血氧機</string>
    <string name="examination_result">檢測結果：</string>
    <string name="examination_normal">正常(血氧下降指標5)</string>
    <string name="examination_innormal">不正常</string>
    <string name="average_spo2_concentration">平均血氧濃度</string>
    <string name="spo2_low_times">血氧下降次數</string>
    <string name="spo2_low_index">血氧下降指標</string>
    <string name="total_sleep_time">總睡眠時間</string>
    <string name="spo2_concentration">血氧濃度</string>＜

    <string name="average_heart_beat">平均心跳</string>
    <string name="heart_beat_fast">過快</string>
    <string name="heart_beat_normal">正常</string>
    <string name="heart_beat_slow">過慢</string>

    <string name="unit_bpm">bpm</string>
    <string name="unit_percent">%</string>
    <string name="unit_times">次</string>
    <string name="unit_percent_per_hour">次數/小時</string>
    <string name="unit_hour">小時</string>

    <string name="exercise_suggestion">貼心小建議：</string>
    <string name="exercise_content">睡覺的時候讓環境保持黑暗、安靜\n睡前不喝含咖啡因的飲料或酒</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="drawer_menu">
        <item>Heart Rate</item>
        <item>SPO2</item>
        <item>Exercise</item>
    </string-array>

</resources>
